welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:2: error: value &! is not a member of Boolean
	(((a<=19)&(a>=13))&!(((b<=13)&(b>=19))))||(!((a<=19)&(a>=13))||((b>=13)&(b<=19)))
                          ^